@@ -8,6 +8,7 @@
 * Added marketo-demo (thanks Glen Lipka!)
 * Added support for ajax-validation, see method "remote"
 * Fixed String.format to jQuery.format (moving into jQuery namespace)
+* Improved URL and email methods (now blacklisting illegal characters to make them much more versatile when dealing with unicode characters, like http://www.føtex.dk/
 
 1.1.1
 -----
